<resources>
    <string name="app_name">Urban Garden</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_forum">Forum</string>
    <string name="title_activity_home_tab">HomeTab</string>
    <string name="tab_text_1">My Plants</string>
    <string name="tab_text_2">My Locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_plants">location pvlants</string>
    <string name="camera_question">What would you like \n to do with the picture?</string>
    <string name="recognize_plant">Recognize\n a plant</string>
    <string name="new_plant_button">add to my plants</string>
    <string name="new_location_button">add to my locations</string>
    <string name="title">Title</string>
    <string name="sign_out">sign out</string>
</resources>