<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraNavigationFragment">

    <TextView
        android:id="@+id/camera_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/camera_question"
        android:textSize="20dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/recognize_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#779378"
        android:drawableLeft="@drawable/question"
        android:text="@string/recognize_plant"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_question" />

    <Button
        android:id="@+id/new_plant_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_green"
        android:drawableLeft="@drawable/plant_q"
        android:text="@string/new_plant_button"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recognize_button" />

    <Button
        android:id="@+id/new_location_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/new_location_button"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_plant_button"
        android:drawableLeft="@drawable/small_location"/>




</androidx.constraintlayout.widget.ConstraintLayout>